--- a/app/src/main/assets/html_terms.css
+++ b/app/src/main/assets/html_terms.css
@@ -1,3 +1,7 @@
+#block h2 {
+    font-size: 24px;
+    color:black;
+}
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     padding-left: 1em;
